<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:orientation="vertical">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

    	<TextView
        	android:text="@string/tvEndereco"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" /> 

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</LinearLayout> 
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

    	<Spinner
        	android:id="@+id/spTipoInter"
			android:layout_width="150dp"
			android:layout_height="60dp" /> 
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="60dp"
			android:text="@string/tvLat" />
		<EditText
			android:layout_width="150dp"
			android:layout_height="60dp" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="60dp"
			android:text="@string/tvLon" />
		<EditText
			android:layout_width="150dp"
			android:layout_height="60dp" />
			
		</LinearLayout> 
		
		

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

    	<TextView
        	android:text="@string/tvSituacao"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" /> 

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</LinearLayout> 
	
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btnText"
			android:onClick="onCliqueButton"
			/>
			
		
		
	</LinearLayout>
	

</LinearLayout>
